--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
-    "echarts": "^4.4.0",
     "element-ui": "^2.10.1",
     "ionicons": "^4.6.3",
     "perfect-scrollbar": "^1.4.0",
@@ -19,6 +18,7 @@
     "screenfull": "^5.0.0",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-i18n": "^8.15.3",
     "vue-router": "^3.0.3",
     "vue2-editor": "^2.9.1",
     "vuex": "^3.0.1"
